add mariadb recover

--- a/ansible/recover/docker/container/tasks/remove.yml
+++ b/ansible/recover/docker/container/tasks/remove.yml
@@ -1,5 +1,5 @@
 ---
-- name: Remove Project volume
+- name: Remove Project Container
   dire_docker:
     action: "remove_container"
     name: "{{ project_name }}"
