--- a/ansible/recover/docker/image/tasks/remove.yml
+++ b/ansible/recover/docker/image/tasks/remove.yml
@@ -1,5 +1,5 @@
 ---
-- name: Remove Project volume
+- name: Remove {{ name }} image
   dire_docker:
     action: "remove_image"
-    name: "{{ project_name }}"
+    name: "{{ name }}"
