--- a/ansible/recover/docker/container/tasks/remove.yml
+++ b/ansible/recover/docker/container/tasks/remove.yml
@@ -1,5 +1,5 @@
 ---
-- name: Remove Project Container
+- name: Remove {{ name }} Container
   dire_docker:
     action: "remove_container"
-    name: "{{ project_name }}"
+    name: "{{ name }}"
