add kubelet config

--- a/ansible/recover/kubelet/tasks/remove.yml
+++ b/ansible/recover/kubelet/tasks/remove.yml
@@ -3,7 +3,7 @@
   become: true
   systemd:
     state: stopped
-    name: etcd
+    name: kube-node
 
 - name: Remove kubelet config
   become: true
