add kubelet config

--- a/ansible/recover/kubelet/tasks/remove.yml
+++ b/ansible/recover/kubelet/tasks/remove.yml
@@ -3,7 +3,7 @@
   become: true
   systemd:
     state: stopped
-    name: kube-node
+    name: kubelet
 
 - name: Remove kubelet config
   become: true
