make utils subsystem for common roles mv common roles to utils subsystem

--- a/ansible/recover/ceph/tasks/remove.yml
+++ b/ansible/recover/ceph/tasks/remove.yml
@@ -1,7 +1,7 @@
 ---
 - name: Remove Container
   include_role:
-    name: 'recover/docker/container'
+    name: 'util/docker/container'
     tasks_from: remove
     apply:
       vars:
