--- a/ansible/decrease/neutron/tasks/cluster.yml
+++ b/ansible/decrease/neutron/tasks/cluster.yml
@@ -1,30 +1,27 @@
 ---
-- name: get decrease node nova services
+- name: get decrease node neturon agents
   shell: |-
     docker exec \
     {% for var in auth_list %} \
       -e {{ var }} \
     {% endfor %} \
     kolla_toolbox \
-    openstack compute service \
+    openstack network agent \
     list  --host {{ inventory_hostname }} -f value -c ID
   when: inventory_hostname in groups['decrease']
   delegate_to: '{{ groups["control"] | first }}'
   register: result
 
-- name: delete decrease node nova services
+- name: delete decrease node neutron agents
   shell: |-
     docker exec \
     {% for var in auth_list %} \
       -e {{ var }}            \
     {% endfor %}              \
     kolla_toolbox             \
-    openstack compute service \
+    openstack network agent \
     delete {{ item }}
   when: inventory_hostname in groups['decrease']
-  register: deleted
-  until: deleted | success
-  retries: 5
   delegate_to: '{{ groups["control"] | first }}'
   with_items:
     '{{ result.stdout_lines }}'
